@@ -6,6 +6,9 @@ Since 0.4.2
   - Added `.return_nothing()` and `.return_primary_key()`
   - Defaults to returning whole model instead of primary key
   - Updated `insert!`'s docs
+- delete!
+  - condition is now added last and executes the query similar to insert!'s
+    behaviour
 - Removed `.transaction(...)` methods
   The transaction reference is now passed directly to the macro instead of a
   database reference.
